Uploads now use unique hashes

--- a/app/templates/analysis.html
+++ b/app/templates/analysis.html
@@ -4,7 +4,7 @@
     <h1>Analysis Complete!</h1>
     <p>
         ConstrictPy has analyzed your data. An archive of the resulting CSV files
-        can be downloaded <a href="/uploads/archive.zip">here.</a>
+        can be downloaded <a href="{{ 'uploads/%s/archive.zip'%session['hash'] }}">here.</a>
     </p>
 
 {% endblock %}
