Begin template rework

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,7 +19,8 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('index') }}">Home</a></li>
-                    <li><a href="{{ url_for('upload') }}">Upload Data</a></li>
+                    <li><a href="{{ url_for('newjob') }}">New Job</a></li>
+                    <li><a href="{{ url_for('jobs') }}">View Jobs</a></li>
                 </ul>
             </div>
         </div>
